# heterogeneous-agent-swarm

./: .gitignore  LICENSE  README.md  current_genome.json  pyproject.toml  requirements.txt
benchmark_results/: benchmark_benchmark_1770174666.json
heterogeneous_agent_swarm/: __init__.py  hard_benchmark.py  main.py
heterogeneous_agent_swarm/agents/: diffusion_explorer.py  dsl_solver.py  jepa_world_model.py  liquid_controller.py  neuro_symbolic.py  snn_core.py  snn_reflex.py  ssm_stability.py  symbolic_search.py  transformer_llm.py
heterogeneous_agent_swarm/core/: arc_dsl.py  audit.py  blackboard.py  checkpoint.py  config.py  evaluation.py  gnn_brain.py  graph.py  memory.py  meta_kernel_v2.py  meta_meta_optimizer.py  orchestrator.py  results.py  tasking.py  tools.py  types.py
heterogeneous_agent_swarm/envs/: arc_env.py  code_sandbox.py  tool_env.py
heterogeneous_agent_swarm/runtime/: __init__.py  runner_v2.py
tests/: test_agj.py  test_c_stage.py  test_dsl_solver.py  test_jepa_refactor.py  test_meta_kernel.py
