[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heterogeneous-agent-swarm"
version = "0.1.0"
description = "Multi-agent system with structural self-modification and cost-aware coordination"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["heterogeneous_agent_swarm*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
